kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.portainer.kubernetes.application.name: ccd-frontend
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stack: ccd
  name: ccd-frontend
  namespace: ccd-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ccd-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ccd-frontend
        io.portainer.kubernetes.application.name: ccd-frontend
    spec:
      containers:
        - env:
            - name: CCD_MAIL_USER
              valueFrom:
                secretKeyRef:
                  key: CCD_MAIL_USER
                  name: ccd-prod-secret
            - name: CCD_MAIL_PASS
              valueFrom:
                secretKeyRef:
                  key: CCD_MAIL_PASS
                  name: ccd-prod-secret
          image: containers.navitech.systems/navitech-systems/ccd-euroservices/ccdeuroservices:master
          imagePullPolicy: Always
          name: ccd-frontend
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.portainer.kubernetes.application.name: ccd-frontend
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stack: ccd
  name: ccd-frontend
  namespace: ccd-prod
spec:
  clusterIP:
  clusterIPs:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ccd-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.portainer.kubernetes.application.name: ccd-frontend
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stack: ccd
  name: ccd-prod-ingress
  namespace: ccd-prod
spec:
  rules:
    - host: ccdeuroservices.ro
      http:
        paths:
          - backend:
              service:
                name: ccd-frontend
                port:
                  number: 3000
            path: /
            pathType: Prefix
